# tmf

./: .dockerignore  .gitignore  Dockerfile  README.md  TOP_TIER_UPGRADE_ROADMAP.md  pyproject.toml  requirements.txt  stage1.py  stage2.py  stage2_core_stats.csv  stage2_correlation_matrix.csv  stage2_modal_comparison.csv  stage2step1.py  stage2step2.py  stage3.py  stage3_ftl_by_type.csv  stage3_policy_summary.csv  stage4.py  stage4_1.py  stage4_1_fairness_by_type.csv  stage4_1_ftl_by_type.csv  stage4_1_policy_summary.csv  stage4_2.py  stage4_2_fairness_by_type.csv  stage4_2_ftl_by_type.csv  stage4_2_policy_summary.csv  stage4_fairness_by_type.csv  stage4_ftl_by_type.csv  stage4_policy_summary.csv
.github/workflows/: ci.yml
.matplotlib/: fontlist-v390.json
