[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tfm-multimodal-scheduling"
version = "0.1.0"
description = "Trace-driven analysis pipeline for multimodal LMM scheduling, latency, energy, and carbon evaluation."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
  { name = "Yutang Jiang" }
]
dependencies = [
  "pandas>=2.3,<2.4",
  "numpy>=2.2,<2.3",
  "matplotlib>=3.10,<3.11",
  "seaborn>=0.13,<0.14",
  "scipy>=1.16,<1.17",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<8.4",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.setuptools]
py-modules = []

